<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:seekarc="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <SeekBar
        android:id="@+id/between_steps_delay_setter"
        android:layout_width="330dp"
        android:layout_height="70dp"
        android:layout_marginTop="16dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/between_steps_delay_display"
        tools:visibility="visible" />

    <Button
        android:id="@+id/stop"
        android:layout_width="114dp"
        android:layout_height="62dp"
        android:layout_marginTop="92dp"
        android:text="@string/stop"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/backward"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/forward"
        app:layout_constraintTop_toBottomOf="@+id/between_steps_delay_setter"
        tools:visibility="visible" />

    <Button
        android:id="@+id/backward"
        android:layout_width="128dp"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:text="@string/backward"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/stop"
        app:layout_constraintEnd_toEndOf="@+id/between_steps_delay_setter"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintStart_toEndOf="@+id/forward"
        app:layout_constraintTop_toBottomOf="@+id/between_steps_delay_setter"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <ToggleButton
        android:id="@+id/toggleConnectionButton"
        android:layout_width="233dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="226dp"
        android:checked="false"
        android:text="@string/togglebutton"
        android:textOff="@string/connect"
        android:textOn="@string/disconnect"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stop"
        app:layout_constraintVertical_bias="0.112"
        tools:visibility="visible" />

    <Button
        android:id="@+id/forward"
        android:layout_width="125dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:text="@string/forward"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/stop"
        app:layout_constraintStart_toStartOf="@+id/between_steps_delay_setter"
        app:layout_constraintTop_toBottomOf="@+id/between_steps_delay_setter"
        app:layout_constraintVertical_bias="0.0"
        tools:visibility="visible" />

    <SeekBar
        android:id="@+id/servo_pos_setter"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servo_position_display"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/servo_position_display"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/servo_position"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/between_steps_delay_display"
        android:layout_width="330dp"
        android:layout_height="62dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/between_steps_delay"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.566"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servo_pos_setter"
        tools:visibility="visible" />


</androidx.constraintlayout.widget.ConstraintLayout>